# libloong

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: bintr-tests.yml  emulator-build-windows.yml  emulator-build.yml  tests.yml
benchmark/: CMakeLists.txt  README.md  build.sh
benchmark/guest/: guest_main.cpp
benchmark/include/: benchmark.hpp
benchmark/src/: benchmark.cpp  main.cpp
docs/: API.md  BUILD.md  EXAMPLES.md  INTEGRATION.md  ISA.md
emulator/: CMakeLists.txt  README.md  build.sh  build_pgo.sh  laemu  mingw_build.sh  mingw_toolchain.cmake
emulator/src/: main.cpp
examples/: CMakeLists.txt  README.md  build.sh  custom_syscall.cpp  simple.cpp
examples/gamedev/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  main.cpp  run.sh
examples/gamedev/guest_game/: Cargo.toml  build.sh
examples/gamedev/guest_game/src/: main.rs
examples/rust/: .gitignore  Cargo.toml  README.md  build.sh
examples/rust/.cargo/: config.toml
examples/rust/src/: hello.rs  kernel.rs  lib.rs  main.rs
examples/script/: .gitignore  CMakeLists.txt  README.md  api_generator.hpp  bindings.hpp  build.sh  example.cpp  example_new.cpp  host_bindings.hpp  script.cpp  script.hpp  script_example  script_types.hpp
examples/script/cmake/: libloong_script-config.cmake.in
examples/script/cpp_project/: CMakeLists.txt  build.sh  libloong_api.hpp
examples/script/cpp_project/src/: main.cpp
examples/script/rust_project/: .gitignore  Cargo.toml  build.sh
examples/script/rust_project/.cargo/: config.toml
examples/script/rust_project/src/: lib.rs  main.rs
fuzz/: CMakeLists.txt  README.md  bintr_fuzz.sh  fuzz.cpp  fuzz.sh
lib/: CMakeLists.txt  libloong.pc.in  libloong_settings.h.in
lib/libloong/: bytecode_impl.cpp  common.cpp  common.hpp  cpu.cpp  cpu.hpp  cpu_dispatch.cpp  cpu_inline.hpp  debug.cpp  debug.hpp  decoded_exec_segment.cpp  decoded_exec_segment.hpp  decoder_cache.cpp  decoder_cache.hpp  elf.hpp  elf_loader.cpp  guest_datatypes.hpp  instruction.hpp  instruction_counter.hpp  la32.cpp  la64.cpp  la_instr.hpp  la_instr_atomic.hpp  la_instr_enum.hpp  la_instr_impl.hpp  la_instr_printers.hpp  machine.cpp  machine.hpp  machine_accelerate.cpp  machine_backtrace.cpp  machine_bytecode_stats.cpp  machine_inline.hpp  machine_vmcall.hpp  memory.cpp  memory.hpp  memory_inline.hpp  memory_rw.cpp  page.hpp  registers.hpp  serialize.cpp  shared_exec_segment.cpp  (+16 more)
lib/libloong/linux/: syscalls.cpp  syscalls_threads.cpp
lib/libloong/native/: heap.hpp
lib/libloong/posix/: signals.cpp  signals.hpp  threads.cpp  threads.hpp
lib/libloong/util/: crc32.hpp  crc32c.cpp
tests/: CMakeLists.txt  README.md  debug_test.cpp  test_runner.cpp
tests/programs/: build_programs.sh  coremark.elf  cxx_test.cpp  fib.c  hello_world.c  luajit.cpp  printf_test.c  return_42_bare.c  show_instructions.sh  signal_test.c  simple_add.c  stream.c
tests/unit/: CMakeLists.txt  INSTRUCTION_TESTING.md  README.md  codebuilder.hpp  instruction_tester.hpp  run_bintr_unit_tests.sh  run_unit_tests.sh  test_basic.cpp  test_cpp.cpp  test_instructions.cpp  test_machine.cpp  test_native.cpp  test_shared_segments.cpp  test_utils.hpp  test_vmcall.cpp  unit_main.cpp
