[package]
name = "hello-loongarch"
version = "0.1.0"
edition = "2021"

[lib]
name = "stream"
path = "src/lib.rs"

[[bin]]
name = "hello-std"
path = "src/hello.rs"

[profile.release]
opt-level = 2
strip = false
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
num-traits = "0.2.19"
size = "0.5.0"
