[package]
name = "script_guest_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "guest_lib"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "guest_app"
path = "src/main.rs"

[profile.release]
opt-level = 2
strip = false
lto = false  # Disable LTO for fast iteration
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
